<!--layout xml tag is used for data binding purpose-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.udacity.shoestore.utils.IntConverter"/>
        <variable
            name="MyShoe"
            type="com.udacity.shoestore.models.Shoe" />
        <variable
            name="viewmodel"
            type="com.udacity.shoestore.viewmodels.SharedViewModel" />
    </data>

    <!-- I used ScrollView to enable displaying hidden views
        ScrollView enable to scroll the hidden views and display it-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!-- I used ConstraintLayout to encapsulate
            and include other views inside it
            Constraint layout is more efficient than
             LinearLayout or Relative Layout as
             it does not allow nested View Groups -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lbl_shoe_name"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/name"
            app:layout_constraintBaseline_toBaselineOf="@+id/etShoeName"
            app:layout_constraintEnd_toStartOf="@+id/etShoeName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/lbl_shoe_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            app:layout_constraintBaseline_toBaselineOf="@+id/etShoeDesc"
            app:layout_constraintEnd_toEndOf="@+id/lbl_shoe_size"
            app:layout_constraintStart_toStartOf="@+id/lbl_shoe_size" />

        <TextView
            android:id="@+id/lbl_shoe_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            app:layout_constraintBaseline_toBaselineOf="@+id/etShoeSize"
            app:layout_constraintEnd_toEndOf="@+id/lbl_shoe_name"
            app:layout_constraintStart_toStartOf="@+id/lbl_shoe_name" />

        <TextView
            android:id="@+id/lbl_shoe_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/company"
            app:layout_constraintBaseline_toBaselineOf="@+id/etShoeCompany"
            app:layout_constraintEnd_toEndOf="@+id/lbl_shoe_company"
            app:layout_constraintStart_toStartOf="@+id/lbl_shoe_company" />

        <EditText
            android:id="@+id/etShoeSize"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/size"
            android:inputType="number|textPersonName|numberDecimal"
            android:text="@={IntConverter.convertDoubleToString(MyShoe.size)}"
            app:layout_constraintBottom_toTopOf="@+id/etShoeCompany"
            app:layout_constraintEnd_toEndOf="@+id/etShoeName"
            app:layout_constraintStart_toStartOf="@+id/etShoeName"
            app:layout_constraintTop_toBottomOf="@+id/etShoeName" />
<!--        android:text="@={newShoe.size}"-->
        <EditText
            android:id="@+id/etShoeName"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@={MyShoe.name}"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"

            app:layout_constraintBottom_toTopOf="@+id/etShoeSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lbl_shoe_name"
            app:layout_constraintTop_toTopOf="parent" />
<!--        android:text="@={newShoe.name}"-->
        <EditText
            android:id="@+id/etShoeCompany"
            android:textColor="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@={MyShoe.company}"
            android:hint="@string/company"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/etShoeDesc"
            app:layout_constraintEnd_toEndOf="@+id/etShoeSize"
            app:layout_constraintStart_toStartOf="@+id/etShoeSize"
            app:layout_constraintTop_toBottomOf="@+id/etShoeSize" />
<!--        android:text="@={newShoe.company}"-->
        <EditText
            android:id="@+id/etShoeDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Description"
            android:textColor="@color/colorAccent"
            android:inputType="textPersonName"
            android:text="@={MyShoe.description}"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="@+id/etShoeCompany"
            app:layout_constraintStart_toStartOf="@+id/etShoeCompany"
            app:layout_constraintTop_toBottomOf="@+id/etShoeCompany" />
<!--        android:text="@={newShoe.description}"-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="360dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddShoe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/save"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel"
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintBottom_toBottomOf="@+id/btnAddShoe"
            app:layout_constraintEnd_toStartOf="@+id/btnAddShoe"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnAddShoe" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>