<?xml version="1.0" encoding="utf-8"?>
<!--layout xml tag is used for data binding purpose-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="LoginViewModel"
            type="com.udacity.shoestore.viewmodels.SharedViewModel" />
    </data>
    <!-- I used ConstraintLayout to encapsulate
            and include other views inside it
            Constraint layout is more efficient than
             LinearLayout or Relative Layout as
             it does not allow nested View Groups -->
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/shoes"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/labelEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintBottom_toTopOf="@id/etEmail"
        android:layout_marginStart="15dp"
        android:textColor="@color/accent_500_2__"
        android:textSize="14sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/labelPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintBottom_toTopOf="@id/etPassword"
        android:layout_marginStart="15dp"
        android:textColor="@color/accent_500_2__"
        android:textSize="14sp" />

    <EditText
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:textColor="@color/accent_500_2__"
        android:textColorHint="@color/accent_500_2__"
        android:inputType="textPersonName|textMultiLine"
        android:maxLines="1"
        android:lines="1"
        android:gravity="top|left" />

    <EditText
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:textColor="@color/accent_500_2__"
        android:textColorHint="@color/accent_500_2__"
        android:inputType="textPersonName|textMultiLine"
        android:maxLines="1"
        android:lines="1"
        android:gravity="top|left" />

    <androidx.appcompat.widget.AppCompatButton
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:text="@string/login"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>
    <androidx.appcompat.widget.AppCompatButton
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        android:text="@string/signup"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:id="@+id/btnSignUp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>